--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "angular": "^1.6.6",
     "angular-dev-server": "^0.2.0",
+    "angular-mocks": "^1.6.6",
     "angular-ui-router": "^1.0.3",
     "bootstrap": "^3.3.7",
     "grunt-angular-templates": "^1.1.0",
